Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.11.7 (unreleased)

    Bugs Fixed

      - Ensure that mailhosts which share a queue directory do not double-
        deliver mails, by sharing the thread which processes emails for
        that directory.  https://bugs.launchpad.net/zope2/+bug/574286

      - Process "evil" JSON cookies which contain double quotes in violation
        of RFC 2965 / 2616.  https://bugs.launchpad.net/zope2/+bug/563229

      - Ensure that Acquistion wrapper classes always have a ``__getnewargs__``
        method, even if it is not provided by the underlying ExtensionClass.

      - Fix the ``tp_name`` of the ImplicitAcquisitionWrapper and
        ExplicitAcquisitionWrapper to match their Python visible names and thus
        have a correct ``__name__``.

      - Expand the ``tp_name`` of Acquisition's extension types to hold the
        fully qualified name. This ensures classes have their ``__module__``
        set correctly.

      - Updated 'pytz' external to point to '2010b' version.

      - Protect ZCTextIndex's clear method against storing Acquisition wrappers.

      - LP #195761: fixed ZMI XML export / import.

      - MailHost should fall back to HELO when EHLO fails.

  Zope 2.11.6 (2010/01/12)

    Bugs Fixed

      - LP #491224: proper escaping of rendered error message

      - Also look for ZEXP imports within the clienthome directory. This
        provides a place to put imports that won't be clobbered by buildout
        in a buildout-based Zope instance.

      - LP #143444: add labels to checkboxes / radio buttons on import
        / export form.

      - Fixed improper handling of IF_MODIFIED_SINCE header
        inside Five/browser/resource.py

  Zope 2.11.5 (2009/12/22)

    Bugs Fixed

      - LP #490514:  preserve tainting when calling into DTML from ZPT.
